--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tasksprofrontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Natoilad.github.io/tasksprofrontend/",
+  "homepage": "https://GoitStudentsWorks.github.io/react_node_fs_64_Natoilad/",
   "dependencies": {
     "@blueprintjs/core": "^4.20.2",
     "@emotion/react": "^11.11.1",
